# ai_examples

./: README.md
ollama-test/: function_call.py  pyproject.toml
