[tool.poetry]
name = "ollama-test"
version = "0.1.0"
description = ""
authors = ["Peter Hulst <peter@hollice.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
